--- a/promesas/04-fetching-exercises/index.html
+++ b/promesas/04-fetching-exercises/index.html
@@ -1,16 +1,13 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/main.js" defer></script>
-    <link rel="stylesheet" href="./src/style.css">
-    <title>Fetching Data</title>
+    <title>Fetching Users</title>
   </head>
   <body>
-    <h2>Star Wars Characters</h2>
-    <button id="fetch-characters-async">Obtener Datos Star Wars</button>
     <div id="app"></div>
   </body>
 </html>
