--- a/promesas/04-fetching-exercises/index.html
+++ b/promesas/04-fetching-exercises/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/main.js" defer></script>
+    <link rel="stylesheet" href="./src/style.css">
     <title>Fetching Users</title>
   </head>
   <body>
+    <h2>Usuarios</h2>
+    <button id="fetch-users-async">Obtener usuarios aleatorios</button>
     <div id="app"></div>
   </body>
 </html>
